--- a/interface/.eslintrc
+++ b/interface/.eslintrc
@@ -17,6 +17,7 @@
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "react/forbid-prop-types": 0,
     "import/extensions": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "jsx-a11y/anchor-is-valid": 0
   }
 }
