--- a/interface/package.json
+++ b/interface/package.json
@@ -10,8 +10,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "typeface-roboto": "^0.0.45"
   },
   "scripts": {
