--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "react/forbid-prop-types": 0,
     "import/extensions": 0,
     "no-param-reassign": 0,
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "consistent-return": 0
   }
 }
