--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "keycode": "^2.1.9",
     "material-ui": "^1.0.0-beta.21",
