--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "import/extensions": 0,
     "no-param-reassign": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "consistent-return": 0
+    "consistent-return": 0,
+    "react/sort-comp": 0
   }
 }
