--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "keycode": "^2.1.9",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
