--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
     "keycode": "^2.1.9",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
-    "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "typeface-roboto": "^0.0.45"
   },
