--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "keycode": "^2.1.9",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
-    "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -16,6 +15,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
     "typeface-roboto": "^0.0.45"
   },
