--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.17.1",
-    "classnames": "^2.2.5",
-    "keycode": "^2.1.9",
-    "material-ui": "^1.0.0-beta.27",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "prop-types": "^15.6.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "redux-thunk": "^2.2.0",
-    "typeface-roboto": "^0.0.45"
+    "axios": "0.17.1",
+    "classnames": "2.2.5",
+    "keycode": "2.1.9",
+    "material-ui": "1.0.0-beta.31",
+    "material-ui-icons": "1.0.0-beta.17",
+    "prop-types": "15.6.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.1.0",
+    "redux": "3.7.2",
+    "redux-immutable-state-invariant": "2.1.0",
+    "redux-thunk": "2.2.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,10 +26,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0"
+    "eslint": "4.16.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.6.1"
   }
 }
