--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "0.17.1",
     "classnames": "2.2.5",
     "keycode": "2.1.9",
-    "material-ui": "1.0.0-beta.31",
+    "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "1.0.0-beta.17",
     "prop-types": "15.6.0",
     "react": "16.2.0",
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "4.16.0",
+    "eslint": "4.17.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
