--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "classnames": "2.2.5",
+    "jwt-decode": "^2.2.0",
     "keycode": "2.1.9",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "1.0.0-beta.17",
