--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "axios": "0.17.1",
     "classnames": "2.2.5",
-    "jwt-decode": "^2.2.0",
+    "jwt-decode": "2.2.0",
     "keycode": "2.1.9",
-    "material-ui": "^1.0.0-beta.32",
+    "material-ui": "1.0.0-beta.32",
     "material-ui-icons": "1.0.0-beta.17",
     "prop-types": "15.6.0",
     "react": "16.2.0",
