--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,8 @@
     "no-param-reassign": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "consistent-return": 0,
-    "react/sort-comp": 0
+    "react/sort-comp": 0,
+    "jsx-a11y/media-has-caption": 0,
+    "no-return-assign": 0
   }
 }
