--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "classnames": "2.2.5",
     "jwt-decode": "2.2.0",
     "keycode": "2.1.9",
-    "material-ui": "1.0.0-beta.32",
+    "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "1.0.0-beta.17",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.1",
     "redux": "3.7.2",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.2.0",
