--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
     "redux": "3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.2.0",
     "typeface-roboto": "0.0.54"
