--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
-    "allowSyntheticDefaultImports": true,
-    "checkJs": true
+    "checkJs": false,
+    "jsx": "react"
   },
   "exclude": ["dist", "node_modules"]
 }
