--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "checkJs": false,
+    "checkJs": true,
     "jsx": "react"
   },
   "exclude": ["dist", "node_modules"]
