--- a/.eslintrc
+++ b/.eslintrc
@@ -1,26 +1,19 @@
 {
   "env": {
     "browser": true,
-    "node": true,
-    "jasmine": true
+    "node": true
   },
-  "parser": "babel-eslint",
   "plugins": ["react", "jsx-a11y", "import"],
   "extends": "airbnb",
+  "parser": "babel-eslint",
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "linebreak-style": 0,
-    "react/require-default-props": 0,
-    "function-paren-newline": 0,
-    "class-methods-use-this": 0,
-    "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "jsx-a11y/anchor-is-valid": 0,
     "react/forbid-prop-types": 0,
     "import/extensions": 0,
-    "no-param-reassign": 0,
-    "jsx-a11y/anchor-is-valid": 0,
-    "consistent-return": 0,
-    "react/sort-comp": 0,
+    "import/no-named-as-default-member": 0,
+    "import/no-named-as-default": 0,
+    "react/jsx-filename-extension": 0,
     "jsx-a11y/media-has-caption": 0,
     "no-return-assign": 0
   }
