--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "0.18.0",
     "classnames": "2.2.5",
     "jwt-decode": "2.2.0",
     "keycode": "2.1.9",
-    "material-ui": "1.0.0-beta.34",
-    "material-ui-icons": "1.0.0-beta.17",
-    "prop-types": "15.6.0",
+    "material-ui": "1.0.0-beta.35",
+    "material-ui-icons": "1.0.0-beta.35",
+    "prop-types": "15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
@@ -28,11 +28,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "eslint": "4.18.0",
+    "babel-eslint": "8.2.2",
+    "eslint": "4.18.2",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.6.1"
+    "eslint-plugin-react": "7.7.0"
   }
 }
