fixed some pages not setting the title

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "classnames": "2.2.5",
     "jwt-decode": "2.2.0",
     "keycode": "2.1.9",
-    "material-ui": "1.0.0-beta.35",
-    "material-ui-icons": "1.0.0-beta.35",
+    "material-ui": "^1.0.0-beta.36",
+    "material-ui-icons": "1.0.0-beta.36",
     "prop-types": "15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
