--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "import/no-named-as-default": 0,
     "react/jsx-filename-extension": 0,
     "jsx-a11y/media-has-caption": 0,
-    "no-return-assign": 0
+    "no-return-assign": 0,
+    "consistent-return": 0
   }
 }
