--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "react/jsx-filename-extension": 0,
     "jsx-a11y/media-has-caption": 0,
     "no-return-assign": 0,
-    "consistent-return": 0
+    "consistent-return": 0,
+    "no-mixed-operators": 0
   }
 }
