--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "axios": "0.18.0",
     "classnames": "2.2.5",
     "jwt-decode": "2.2.0",
-    "keycode": "2.1.9",
-    "material-ui": "1.0.0-beta.36",
+    "keycode": "2.2.0",
+    "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "1.0.0-beta.36",
     "prop-types": "15.6.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
@@ -29,9 +29,9 @@
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
-    "eslint": "4.18.2",
+    "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0"
   }
