--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "dependencies": {
     "axios": "0.18.0",
     "classnames": "2.2.5",
+    "date-fns": "2.0.0-alpha.7",
     "jwt-decode": "2.2.0",
-    "keycode": "2.2.0",
-    "material-ui": "^1.0.0-beta.39",
+    "material-ui": "1.0.0-beta.40",
     "material-ui-icons": "1.0.0-beta.36",
+    "material-ui-pickers": "1.0.0-rc.4",
     "prop-types": "15.6.1",
     "react": "16.3.0",
     "react-dom": "16.3.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "1.1.2",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-immutable-state-invariant": "2.1.0",
