--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,18 @@
 {
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "plugins": ["react", "jsx-a11y", "import"],
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "linebreak-style": 0,
     "jsx-a11y/anchor-is-valid": 0,
