--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "axios": "0.18.0",
     "classnames": "2.2.5",
-    "date-fns": "2.0.0-alpha.7",
     "jwt-decode": "2.2.0",
-    "material-ui": "1.0.0-beta.40",
+    "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "1.0.0-beta.36",
-    "material-ui-pickers": "1.0.0-rc.5",
+    "material-ui-time-picker": "0.1.7",
     "prop-types": "15.6.1",
     "react": "16.3.1",
     "react-dom": "16.3.1",
