--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "1.0.0-beta.42",
     "axios": "0.18.0",
     "classnames": "2.2.5",
     "jwt-decode": "2.2.0",
-    "material-ui": "1.0.0-beta.41",
-    "material-ui-icons": "1.0.0-beta.36",
+    "material-ui": "1.0.0-beta.42",
     "material-ui-time-picker": "0.1.7",
     "prop-types": "15.6.1",
-    "react": "16.3.1",
-    "react-dom": "16.3.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0"
   }
