--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "jsx-a11y/media-has-caption": 0,
     "no-return-assign": 0,
     "consistent-return": 0,
-    "no-mixed-operators": 0
+    "no-mixed-operators": 0,
+    "no-else-return": 0
   }
 }
