--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/icons": "1.0.0-beta.43",
     "axios": "0.18.0",
     "classnames": "2.2.5",
+    "immer": "1.2.1",
     "jwt-decode": "2.2.0",
     "material-ui": "1.0.0-beta.43",
     "material-ui-time-picker": "0.1.7",
