--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "no-return-assign": 0,
     "consistent-return": 0,
     "no-mixed-operators": 0,
-    "no-else-return": 0
+    "no-else-return": 0,
+    "no-param-reassign": 0
   }
 }
