--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@material-ui/icons": "1.0.0-beta.43",
     "axios": "0.18.0",
     "classnames": "2.2.5",
-    "immer": "1.2.1",
+    "immer": "1.3.0",
     "jwt-decode": "2.2.0",
-    "material-ui": "1.0.0-beta.43",
+    "material-ui": "^1.0.0-beta.45",
     "material-ui-time-picker": "0.1.7",
     "prop-types": "15.6.1",
     "react": "16.3.2",
