--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "consistent-return": 0,
     "no-mixed-operators": 0,
     "no-else-return": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "no-underscore-dangle": 0
   }
 }
