--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/icons": "1.0.0-beta.43",
+    "@material-ui/core": "1.0.0-rc.0",
+    "@material-ui/icons": "1.0.0-rc.0",
     "axios": "0.18.0",
     "classnames": "2.2.5",
+    "date-fns": "2.0.0-alpha.7",
     "immer": "1.3.0",
     "jwt-decode": "2.2.0",
-    "material-ui": "^1.0.0-beta.45",
-    "material-ui-time-picker": "0.1.7",
+    "material-ui-pickers": "1.0.0-rc.8",
     "prop-types": "15.6.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
@@ -33,6 +34,6 @@
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.7.0"
+    "eslint-plugin-react": "7.8.2"
   }
 }
