--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "1.0.0-rc.1",
-    "@material-ui/icons": "1.0.0-rc.0",
+    "@material-ui/core": "1.0.0",
+    "@material-ui/icons": "1.0.0",
     "axios": "0.18.0",
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
